Fix typo in security cards (again, because im a retard) [fix #140]

--- a/web/src/app/routes/guild/guild.component.html
+++ b/web/src/app/routes/guild/guild.component.html
@@ -89,7 +89,7 @@
                     <span>Prevents members of sending guild invite links.</span>
                 </div>
                 <div>
-                    <button *ngIf="guildSettingsContains('sp.guild.mod.inviteblock')" (click)="toggleInviteBlocing()">{{ guild.invite_block_enabled ? 'Disable' : 'Dnable' }}</button>
+                    <button *ngIf="guildSettingsContains('sp.guild.mod.inviteblock')" (click)="toggleInviteBlocing()">{{ guild.invite_block_enabled ? 'Disable' : 'Enable' }}</button>
                 </div>
             </div>
         </div>
