--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -24,7 +24,6 @@
     display: flex
     border-radius: 5px
     padding: 10px
-    height: 100px
 
     +hover-btn(1.01)
 
@@ -33,7 +32,8 @@
 
     img
         border-radius: 5px
-        height: 100%
+        height: 80px
+        width: 80px
         margin-right: 20px
 
     .permlvl
