update karma visualization in web interface [#134]

--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -79,7 +79,15 @@
             <app-rolebadge *ngFor="let r of memberRoles" [role]="r"></app-rolebadge>
         </div>
 
+        <h4 class="mt-4 mb-3">Karma</h4>
+
+        <div class="d-flex">
+            <app-karma-tile title="Guild" [value]="member.karma" class="mr-3"></app-karma-tile>
+            <app-karma-tile title="Total" [value]="member.karma_total"></app-karma-tile>
+        </div>
+
         <h4 class="mt-4 mb-3">General User Information</h4>
+
         <table class="general-user-info mt-2">
             <tbody>
                 <tr>
@@ -89,15 +97,6 @@
                 <tr>
                     <th>Created Account</th>
                     <td>{{ dateFormat(member.created_at, "ddd, mmm dS, yyyy - HH:MM:ss Z") }}</td>
-                </tr>
-                <br>
-                <tr>
-                    <th>Karma on Guild</th>
-                    <td>{{ member.karma }}</td>
-                </tr>
-                <tr>
-                    <th>Karma Total</th>
-                    <td>{{ member.karma_total }}</td>
                 </tr>
                 <br>
                 <tr>
