--- a/web/src/sass/vars.sass
+++ b/web/src/sass/vars.sass
@@ -7,6 +7,7 @@ $c-red:     #e53935
 $c-orange:  #F57C00
 $c-green:   #43A047
 $c-lime:    #8BC34A
+$c-cyan:    #03A9F4
 
 $c-bg-general: $c-darkbnb
 $c-font-general: white
