--- a/web/src/app/routes/member/member.component.sass
+++ b/web/src/app/routes/member/member.component.sass
@@ -67,3 +67,6 @@ ul
     background-color: rgba(0, 0, 0, .4)
     color: white
     
+.karma-tile
+    border-radius: 5px
+    +hover-btn(1.05, 5px)
