--- a/web/src/app/components/karma-tile/karma-tile.component.sass
+++ b/web/src/app/components/karma-tile/karma-tile.component.sass
@@ -11,11 +11,11 @@
     .title
         text-transform: uppercase
         font-size: 13px
-        margin: 0
+        margin: 0px 4px
 
     .value
         font-weight: 500
-        margin: 5px 10px
+        margin: 5px 10px 5px 10px
 
 
 .bad
