--- a/web/src/app/routes/guild/guild.component.html
+++ b/web/src/app/routes/guild/guild.component.html
@@ -1,6 +1,11 @@
 <div>
     <app-spinner *ngIf="!guild" id="spinner-load-guild" [started]="true"></app-spinner>
-    <div *ngIf="guild">
+
+    <div class="scoreboard-container">
+        <app-karma-scoreboard [scoreboard]="scoreboard" [guildID]="this.guild.id"></app-karma-scoreboard>
+    </div>
+
+    <div *ngIf="guild" class="guild-container">
 
         <!-- HEADING -->
         <div id="heading-container">
