update web interface header

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <app-header id="header"></app-header>
 <div id="toasts-container">
     <app-toast 
@@ -12,6 +11,6 @@
         {{ t.text }}
     </app-toast>
 </div>
-<div class="p-3">
+<div id="router-outlet">
     <router-outlet></router-outlet>
 </div>
