--- a/web/src/app/app.component.sass
+++ b/web/src/app/app.component.sass
@@ -1,3 +1,12 @@
+#header
+    z-index: 10
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25)
+    
+
 #toasts-container
     display: block
     position: fixed
@@ -6,3 +15,8 @@
     z-index: 5
     top: 15px + 50px
     right: 15px
+
+
+#router-outlet
+    margin-top: 50px
+    padding: 10px
