--- a/web/src/app/components/karma-tile/karma-tile.component.sass
+++ b/web/src/app/components/karma-tile/karma-tile.component.sass
@@ -18,6 +18,11 @@
         margin: 5px 10px 5px 10px
 
 
+.small
+    .value
+        margin: 0
+
+
 .bad
     background-color: rgba($c-red, 0.15)
     border-color: rgba($c-red, 0.75)
