--- a/web/src/app/components/karma-scoreboard/karma-scoreboard.component.sass
+++ b/web/src/app/components/karma-scoreboard/karma-scoreboard.component.sass
@@ -2,10 +2,11 @@
 
 
 .container
-    width: 380px
+    width: 320px
     background-color: rgba(0, 0, 0, 0.15)
     border-radius: 10px
     padding: 10px
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25)
 
     
 .scoreboard-entry
@@ -19,8 +20,8 @@
     +hover-btn(1.01, 5px)
 
     > .index
-        width: 50px
-        font-size: 18px
+        min-width: 40px
+        font-size: 16px
         font-weight: bold
         display: flex
         align-items: center
@@ -29,6 +30,8 @@
     > img
         border-radius: 100%
         margin-right: 10px
+        width:  30px
+        height: 30px
 
     > .value
         font-size: 18px
@@ -42,7 +45,7 @@
 
 
 .ellipsis
-    max-width: 200px
+    // max-width: 200px
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
