center and max-width frontend layout [#151]

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -12,5 +12,7 @@
     </app-toast>
 </div>
 <div id="router-outlet">
-    <router-outlet></router-outlet>
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
 </div>
