--- a/web/src/app/app.component.sass
+++ b/web/src/app/app.component.sass
@@ -20,3 +20,10 @@
 #router-outlet
     margin-top: 50px
     padding: 10px
+    display: flex
+    justify-content: center
+    
+    .content
+        max-width: 950px
+        width: 100%
+        // margin: 0 auto
