--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -62,17 +62,18 @@
 
 .guild-container
     @media only screen and (min-width: 900px)
-        margin-right: 360px
+        // margin-right: 360px
 
 
 .scoreboard-container
-    @media only screen and (min-width: 900px)
+    @media only screen and (min-width: 1650px)
         display: block
+        position: fixed
+        top: 50px + 20px
+        right: 20px
+        width: 320px
 
-    display: none
-    position: fixed
-    top: 50px + 20px
-    right: 20px
+    margin-top: 30px
 
 
 .settingsTile
