add report revocation to web frontend [fix #153]

--- a/web/src/app/components/report/report.component.html
+++ b/web/src/app/components/report/report.component.html
@@ -45,7 +45,11 @@
             </ng-template>
         </div>
     
-        <p class="footer">Case-ID: {{ report.id }}&nbsp;&nbsp;|&nbsp;&nbsp;Created {{ dateFormat(report.created, 'yyyy.mm.dd - HH:MM:ss Z') }}</p>
+        <p class="footer">
+            Case-ID: {{ report.id }}&nbsp;&nbsp;|&nbsp;&nbsp;
+            Created {{ dateFormat(report.created, 'yyyy.mm.dd - HH:MM:ss Z') }}&nbsp;&nbsp;|&nbsp;&nbsp;
+            <a (click)="revoke.emit()">Revoke Report</a>
+        </p>
     </div>
 
 </div>
