--- a/web/src/app/components/report/report.component.sass
+++ b/web/src/app/components/report/report.component.sass
@@ -9,6 +9,10 @@ p
 h4
     margin-bottom: 10px !important
 
+a
+    color: $c-blurple !important
+    text-decoration: underline !important
+
 .report-container
     background-color: $c-nqblack
     border-radius: $border-rad
