--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -201,6 +201,13 @@
             margin-right: 0
 
 
+.rep-reason
+    width: 100%
+    height: 100px
+    background-color: rgba(0, 0, 0, .4)
+    color: white
+
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
