optimize scoreboard layout [#134]

--- a/web/src/app/components/karma-scoreboard/karma-scoreboard.component.html
+++ b/web/src/app/components/karma-scoreboard/karma-scoreboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="karma-container">
     <h6 class="mb-2">Karma Scoreboard</h6>
     <app-spinner id="spinner-load-permissions" *ngIf="scoreboard == null; else scoreboardContainer" [started]="true"></app-spinner>
     <ng-template #scoreboardContainer>
