--- a/web/src/app/components/karma-scoreboard/karma-scoreboard.component.sass
+++ b/web/src/app/components/karma-scoreboard/karma-scoreboard.component.sass
@@ -1,7 +1,7 @@
 @import '../../../sass/mixins'
 
 
-.container
+.karma-container
     background-color: rgba(0, 0, 0, 0.15)
     border-radius: 10px
     padding: 10px
