--- a/web/src/app/routes/guild/guild.component.html
+++ b/web/src/app/routes/guild/guild.component.html
@@ -297,6 +297,7 @@
             </div>
         </div>
 
+        <!-- SCOREBOARD -->
         <div class="scoreboard-container">
             <app-karma-scoreboard [scoreboard]="scoreboard" [guildID]="this.guild?.id"></app-karma-scoreboard>
         </div>
