--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -8,9 +8,9 @@
 
 html, body
     background-color: $c-bg-general !important
-    margin:  0
+    margin: 0
     padding: 0
-    color:   $c-font-general !important
+    color: $c-font-general !important
     font-family: 'Roboto', sans-serif
 
     &::-webkit-scrollbar
@@ -48,7 +48,7 @@ button
         transform: translateY(-2px)
 
     &:disabled
-      background-color: desaturate($c-blurple, 20)
+        background-color: desaturate($c-blurple, 20)
 
 
 hr
@@ -144,8 +144,8 @@ select
 
 
 .dark-modal .modal-content
-      background-color: #292b2c
-      color: white
+    background-color: #292b2c
+    color: white
     
 
 .dark-modal .close
@@ -159,3 +159,8 @@ select
     border-radius: 10px
     margin: 0
     height: fit-content
+
+
+.flex-center
+    display: flex
+    align-items: center
