--- a/web/src/app/routes/commands/commands.component.html
+++ b/web/src/app/routes/commands/commands.component.html
@@ -1,1 +1,49 @@
-<p>commands works!</p>
+<!-- @format -->
+
+<div class="group-tile-container">
+  <div *ngFor="let kv of groupMap | keyValue">
+    <h5>{{ kv.key }}</h5>
+    <div>
+      <a
+        *ngFor="let c of kv.value | commandSort"
+        (click)="scrollTo('#' + c.invokes[0])"
+        >{{ c.invokes[0] }}</a
+      >
+    </div>
+  </div>
+</div>
+
+<div *ngFor="let kv of groupMap | keyValue" class="mt-4">
+  <h3>{{ kv.key }}</h3>
+  <div
+    *ngFor="let c of kv.value | commandSort"
+    class="command-tile"
+    [id]="c.invokes[0]"
+  >
+    <div class="flex-center">
+      <h5>{{ c.invokes[0] }}</h5>
+      <p class="embeded ml-2">{{ c.domain_name }}</p>
+    </div>
+    <div class="mt-2">
+      <span *ngFor="let invoke of c.invokes" class="invoke">{{ invoke }}</span>
+    </div>
+    <div class="mt-3 details">
+      <h6>Description</h6>
+      <span>{{ c.description }}</span>
+    </div>
+    <div class="mt-3 details">
+      <h6>Help</h6>
+      <markdown [data]="c.help.replace('\n', '<br>')"></markdown>
+    </div>
+    <div *ngIf="c.sub_permission_rules?.length > 0" class="mt-3 details">
+      <h6>Sub Permission Rules</h6>
+      <ul>
+        <li *ngFor="let spr of c.sub_permission_rules">
+          <span>{{ spr.term }} - </span>
+          <span *ngIf="spr.explicit">[EXPLICIT] - </span>
+          <span>{{ spr.description }}</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
