--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -12,6 +12,7 @@ html, body
     padding: 0
     color: $c-font-general !important
     font-family: 'Roboto', sans-serif
+    scroll-behavior: smooth
 
     &::-webkit-scrollbar
         width: 10px
