update layout of commands route [#158]

--- a/web/src/app/routes/commands/commands.component.html
+++ b/web/src/app/routes/commands/commands.component.html
@@ -10,7 +10,7 @@
 </button>
 
 <div class="group-tile-container">
-  <div *ngFor="let kv of groupMap | keyValue">
+  <div *ngFor="let kv of groupMap | keyValue" class="group-tile">
     <h5>{{ kv.key }}</h5>
     <div>
       <a
