--- a/web/src/app/routes/guild/guild.component.html
+++ b/web/src/app/routes/guild/guild.component.html
@@ -121,6 +121,7 @@
             <app-report 
                 *ngFor="let rep of reports" 
                 [report]="rep"
+                [allowRevoke]="canRevoke"
                 (revoke)="revokeReport(rep)"
             ></app-report>
             <div class="d-flex">
