--- a/web/src/app/components/popup/popup.component.sass
+++ b/web/src/app/components/popup/popup.component.sass
@@ -2,9 +2,10 @@
 
 
 .popup
-    background-color: rgba(0, 0, 0, .4)
+    background-color: darken($c-bg-general, 10%)
     border-radius: 5px
     z-index: 2
+    box-shadow: 0 0 15px 0 rgba(black, 0.5)
 
     .element
         padding: 10px 15px
