--- a/web/src/app/components/member/member.component.html
+++ b/web/src/app/components/member/member.component.html
@@ -2,7 +2,7 @@
     class="member-container" 
     [style.background-color]="getMemberColor(0.3)"
 >
-    <img [src]="member.avatar_url"/>
+    <img [src]="member.avatar_url | discordAsset:'':64"/>
     <div>
         <div class="d-flex">
             <p>{{ member.nick || member.user.username }}</p>
