--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -218,6 +218,24 @@
     color: white
 
 
+.advanced
+    background-color: rgba($c-orange, .25)
+
+
+.advanced-button
+    background-color: rgba(255, 255, 255, 0.15)
+    border-radius: 50% !important
+    width: 70px
+    height: 70px
+    padding: 10px !important
+    cursor: pointer
+    opacity: 0.9
+    margin: 10px !important
+    outline: none
+
+    +hover-btn(1.07, 5px)
+
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
