--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -165,3 +165,8 @@ select
 .flex-center
     display: flex
     align-items: center
+
+
+.guild-settings-container
+    padding-top: 10px
+    padding-left: $guild-settings-nav-width + 20px
