--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -168,5 +168,8 @@ select
 
 
 .guild-settings-container
-    padding-top: 10px
-    padding-left: $guild-settings-nav-width + 20px
+    position: absolute
+    top: 50px
+    left: $guild-settings-nav-width
+    padding-top: 30px
+    padding-left: 40px
