bind karma settings to karma listener [#146]

--- a/web/src/app/components/slider/slider.component.html
+++ b/web/src/app/components/slider/slider.component.html
@@ -1,5 +1,5 @@
 <a class="btn" (click)="onClick()">
-    <div class="container">
+    <div class="container-slider">
         <div class="bar" [class.baractive]="value"></div>
         <div class="nob" [class.nobactive]="value"></div>
     </div>
