--- a/web/src/app/components/slider/slider.component.sass
+++ b/web/src/app/components/slider/slider.component.sass
@@ -13,7 +13,7 @@ $bar-height: $nob-size + $bar-padding
     cursor: pointer
     display: flex
 
-.container
+.container-slider
     padding: 0px
     width: $bar-width
     margin-right: 10px
