--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -62,7 +62,7 @@ input
     color: white
     +transition25
     
-    &[type=text]
+    &[type=text], &[type=password], &[type=number]
         border-bottom: solid 1px white
 
         &:focus
